# template

./: .gitignore  README.md  makefile  pyproject.toml
.github/: lint.yaml
.github/workflows/: lint.yaml
app/config/: __init__.py  config.py  settings.py
app/database/: __init__.py  mongodb.py
app/database/model/: __init__.py  user.py
app/exception/: __init__.py  user_service_exception.py
app/server/: __init__.py  celery_worker.py  main.py  setup.py
app/server/repository/: __init__.py  user_repository.py
app/server/router/: __init__.py  auth.py
app/server/schema/request/: user.py
app/server/schema/response/: user.py
app/server/service/: auth_service.py
app/server/tasks/: run_pipeline.py
config/: prod.yaml
docker/: docker-compose.yml
docker/backend/: dockerfile
docker/celery/: dockerfile
docker/frontend/: dockerfile
docker/nginx/: dockerfile  nginx.conf
docker/redis/: dockerfile
jobs/: log_temp_cpu.py
make/: backend.mk  celery.mk  corn_job.mk  docker.mk  docker_backend.mk  frontend.mk  lint.mk  uv.mk
ui/: package-lock.json  vite.config.ts
ui/src/: App.css  App.tsx
